<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/white"
    >

    <ImageView
        android:id="@+id/imageViewLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_dialog_alert" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/loading_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/buttonLoading"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:textColor="@android:color/darker_gray"
        android:text="@string/click_refresh_txt" />

</LinearLayout>