<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/navigation_drawer_user_account_picture_profile"
            android:layout_width="@dimen/navigation_drawer_profile_image_size"
            android:layout_height="@dimen/navigation_drawer_profile_image_size"
            android:src="@mipmap/avatar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:text="@string/tools_text_account_information_username"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="0.0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <com.yuxingxin.yxtx.view.TintOnStateImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_work_black_24dp"
                    style="@style/aboutIcon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/career_txt"
                    android:textColor="@color/primary"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0.0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <com.yuxingxin.yxtx.view.TintOnStateImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_place_black_24dp"
                    style="@style/aboutIcon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_txt"
                    android:textColor="@color/primary"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_200"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0.0dp"
                android:layout_weight="1.0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                >
                <com.yuxingxin.yxtx.view.TintOnStateImageView
                    android:src="@mipmap/weibo"
                    style="@style/aboutIcon"
                    />
                <TextView
                    android:id="@+id/weibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weibo_txt"
                    android:textColor="@color/primary"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0.0dp"
                android:layout_weight="1.0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                >
                <com.yuxingxin.yxtx.view.TintOnStateImageView
                    android:src="@mipmap/twitter"
                    style="@style/aboutIcon"
                    />
                <TextView
                    android:id="@+id/twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twitter_txt"
                    android:textColor="@color/primary"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0.0dp"
                android:layout_weight="1.0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                >
                <com.yuxingxin.yxtx.view.TintOnStateImageView
                    android:src="@mipmap/facebook"
                    style="@style/aboutIcon"
                    />
                <TextView
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook_txt"
                    android:textColor="@color/primary"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0.0dp"
                android:layout_weight="1.0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                >
                <com.yuxingxin.yxtx.view.TintOnStateImageView
                    android:src="@mipmap/google_plus"
                    style="@style/aboutIcon"
                    />
                <TextView
                    android:id="@+id/google_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google_plus_txt"
                    android:textColor="@color/primary"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0.0dp"
                android:layout_weight="1.0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                >
                <com.yuxingxin.yxtx.view.TintOnStateImageView
                    android:src="@mipmap/github"
                    style="@style/aboutIcon"
                    />
                <TextView
                    android:id="@+id/github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/github_txt"
                    android:textColor="@color/primary"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0.0dp"
                android:layout_weight="1.0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                >
                <com.yuxingxin.yxtx.view.TintOnStateImageView
                    android:src="@mipmap/stackoverflow"
                    style="@style/aboutIcon"
                    />
                <TextView
                    android:id="@+id/stackoverflow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stackoverflow_txt"
                    android:textColor="@color/primary"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/weixin"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:text="@string/weixin_txt"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:text="@string/copyright_txt"
            android:textColor="@color/grey_600"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
</ScrollView>