<?xml version="1.0" encoding="utf-8"?>
<com.yuxingxin.yxtx.layout.ScrimInsetsFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_navigation_drawer_rootLayout"
    style="@style/ScrimInsetsLayout"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/navigation_drawer_account_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_account_section_default_height"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            tools:layout_height="@dimen/navigation_drawer_account_section_default_height">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:id="@+id/navigation_drawer_user_account_picture_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/primary"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

            </FrameLayout>

            <RelativeLayout
                android:id="@+id/navigation_drawer_account_section"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/nav_drawer_vertical_spacing_listing"
                android:paddingEnd="@dimen/nav_drawer_vertical_keyline_right"
                android:paddingLeft="@dimen/nav_drawer_vertical_keyline_icon_left"
                android:paddingRight="@dimen/nav_drawer_vertical_keyline_right"
                android:paddingStart="@dimen/nav_drawer_vertical_keyline_icon_left">

                <LinearLayout
                    android:id="@+id/navigation_drawer_account_information"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navigation_drawer_account_information_height"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/navigation_drawer_account_information_display_name"
                        style="@style/NavDrawerAccountInfoText"
                        android:text="@string/tools_text_account_information_username"
                        tools:fontFamily="sans-serif-medium"/>

                    <TextView
                        android:id="@+id/navigation_drawer_account_information_profile"
                        style="@style/NavDrawerAccountInfoText"
                        android:text="@string/tools_text_account_information_profile"
                        android:layout_marginTop="5dp"
                        tools:fontFamily="sans-serif"/>

                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/navigation_drawer_user_account_picture_profile"
                    android:layout_width="@dimen/navigation_drawer_profile_image_size"
                    android:layout_height="@dimen/navigation_drawer_profile_image_size"
                    android:layout_above="@id/navigation_drawer_account_information"
                    android:src="@mipmap/avatar"
                    android:layout_centerInParent="true"
                     />

            </RelativeLayout>

        </FrameLayout>

        <!-- Drawer items -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/navigation_drawer_background"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/nav_drawer_vertical_spacing_listing"
            android:paddingTop="@dimen/nav_drawer_vertical_spacing_listing">

            <LinearLayout
                android:id="@+id/navigation_drawer_linearLayout_entries_root_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_home"
                    style="@style/NavDrawerRowLayout.Main">

                    <com.yuxingxin.yxtx.view.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_home"
                        style="@style/NavDrawerRowItemIcon"
                        tools:ignore="ContentDescription"
                        tools:tint="@color/nav_drawer_item_icon_selected"
                        android:src="@mipmap/ic_home_black_24dp"
                        />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_home"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_item_home"
                        tools:fontFamily="sans-serif-medium"
                        tools:textColor="@color/nav_drawer_item_text_selected"/>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_category"
                    style="@style/NavDrawerRowLayout.Main">

                    <com.yuxingxin.yxtx.view.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_category"
                        style="@style/NavDrawerRowItemIcon"
                        tools:ignore="ContentDescription"
                        tools:tint="@color/nav_drawer_item_icon_selected"
                        android:src="@mipmap/ic_bookmark_black_24dp"
                        />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_category"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_item_category"
                        tools:fontFamily="sans-serif-medium"
                        tools:textColor="@color/nav_drawer_item_text_selected"/>

                </FrameLayout>
                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_tag"
                    style="@style/NavDrawerRowLayout.Main">

                    <com.yuxingxin.yxtx.view.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_tag"
                        style="@style/NavDrawerRowItemIcon"
                        tools:ignore="ContentDescription"
                        tools:tint="@color/nav_drawer_item_icon_selected"
                        android:src="@mipmap/ic_loyalty_black_24dp"
                        />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_tag"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_item_tag"
                        tools:fontFamily="sans-serif-medium"
                        tools:textColor="@color/nav_drawer_item_text_selected"/>

                </FrameLayout>
                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_archive"
                    style="@style/NavDrawerRowLayout.Main">

                    <com.yuxingxin.yxtx.view.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_archive"
                        style="@style/NavDrawerRowItemIcon"
                        tools:ignore="ContentDescription"
                        tools:tint="@color/nav_drawer_item_icon_selected"
                        android:src="@mipmap/ic_card_travel_black_24dp"
                        />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_archive"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_item_archive"
                        tools:fontFamily="sans-serif-medium"
                        tools:textColor="@color/nav_drawer_item_text_selected"/>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_about"
                    style="@style/NavDrawerRowLayout.Main" >

                    <com.yuxingxin.yxtx.view.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_about"
                        style="@style/NavDrawerRowItemIcon"
                        tools:ignore="ContentDescription"
                        android:src="@mipmap/ic_perm_identity_black_24dp"
                        />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_about"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_item_about"
                        tools:fontFamily="sans-serif-medium"
                        tools:textColor="@color/nav_drawer_item_text_selected"
                        />

                </FrameLayout>

                <include
                    layout="@layout/navigation_drawer_divider"/>

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_email"
                    style="@style/NavDrawerRowLayout.Secondary">

                    <com.yuxingxin.yxtx.view.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_email"
                        style="@style/NavDrawerRowItemIcon"
                        tools:ignore="ContentDescription"
                        android:src="@mipmap/ic_email_black_24dp"
                        />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_email"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_email"
                        tools:fontFamily="sans-serif-medium"
                        tools:textColor="@color/nav_drawer_item_text_selected"
                        />

                </FrameLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</com.yuxingxin.yxtx.layout.ScrimInsetsFrameLayout>